[package]
name = "usbd-picotool-reset"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The rp-rs Developers"]
description = "USB Class to enable resetting using picotool"
documentation = "https://docs.rs/usbd-picotool-reset"
repository = "https://github.com/ithinuel/usbd-picotool-reset"

[package.metadata.docs.rs]
features = ["defmt"]
targets = ["thumbv6m-none-eabi" , "thumbv8m.main-none-eabihf", "riscv32imac-unknown-none-elf"]

[dependencies]
usb-device = "0.3.2"
defmt = { version = ">=0.2.0, <0.4", optional = true }
rp2040-hal = { version = "0.10.1", optional = true }
rp235x-hal = { version = "0.2.0", optional = true }

[dev-dependencies]
rp-pico = "0.9.0"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.3"

[features]
rp2040 = ["dep:rp2040-hal"]
rp235x = ["dep:rp235x-hal"]

[patch.crates-io]
rp235x-hal = { git = "https://github.com/rp-rs/rp-hal.git" }
